--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,13 +2,20 @@
 
 {% block content %}
     <div class="post">
-        {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-        {% endif %}
-        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+      {% if post.published_date %}
+          <div class="date">
+              {{ post.published_date }}
+          </div>
+      {% else %}
+         <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+      {% endif %}
+      {% if user.is_authenticated %}
+         <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+         <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+         <h1>{{ post.title }}</h1>
+         <p>{{ post.text|linebreaksbr }}</p>
+      {% else %}
+         <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+      {% endif %}
     </div>
 {% endblock %}
